# Web-Analyzer

./: LICENSE  README.en-us.md  README.md  README.pt-br.md  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
tester/: analysis.py  config.py  display.py  main.py
tester/i18n/: i18n.py
