[project]
name = "website-tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "cryptography>=45.0.5",
    "ping3>=4.0.8",
    "python-whois>=0.9.5",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
]
